wellesleynet/roles/k8s/files/tang.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: tang
  name: tang
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tang
  template:
    metadata:
      labels:
        app: tang
    spec:
      containers:
      # I didn't fork this, and I don't want to risk running :latest
      - image: docker.io/malaiwah/tang@sha256:6c0f8d11ad4568d9dfb2602221da31920006fe9b7d07a5ed1570b391e96bae26
        imagePullPolicy: Always
        name: tang
        ports:
        - containerPort: 80
        volumeMounts:
        - name: tang
          mountPath: /var/db/tang
          readOnly: true
      volumes:
      - name: tang
        secret:
          secretName: tang
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: tang
  namespace: default
  labels:
    app: tang
spec:
  selector:
    app: tang
  ports:
  - protocol: TCP
    port: 80
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: tang
  namespace: default
spec:
  rules:
  - host: tang.kiski.co
    http:
      paths:
      - backend:
          serviceName: tang
          servicePort: 80
